adding more comments

--- a/S1_sea_ice_classification/label_propagation.ipynb
+++ b/S1_sea_ice_classification/label_propagation.ipynb
@@ -5,9 +5,11 @@
    "id": "ca95e565-7c85-47d1-96f5-c053accf76d7",
    "metadata": {},
    "source": [
-    "### This notebook implements label propagation for the classification of sea ice types from a Sentinel-1 image crop\n",
-    "##### Pre-processing steps include cropping and normalization of the original Sentinel-1 image\n",
-    "##### Label Propagation is implemented using scikit-learn (https://scikit-learn.org/stable/modules/generated/sklearn.semi_supervised.LabelPropagation.html)"
+    "### This notebook implements label propagation for the classification of sea ice types from a Sentinel-1 EW GRDM image crop\n",
+    "#### Classification is performed on crops of S1 EW GRDM images of 1500 x 1500 pixels. These pre-processed image crops are provided in the 'data' folder. The crops are calibrated and multilooked with a 3x3 window. The 'data' folder contains two subfolders containing crops and label masks for two different Sentinel-1 EW GRDM images. The subfolders are named after the S1 identifiers of these images. Inside each subfolder, you will find 4 files: 'Sigma0_HH_db', 'Sigma0_HV_db', 'label_mask', and 'labels.txt'. \n",
+    "#### 'Sigma0_HH_db' and 'Sigma0_HV_db' are the calibrated and multilooked image crops, for both image channels. The file 'label_mask' is an image mask of the same size as the image channels, containing manually labeled polygons for the different sea ice types we want to classify in the image crops. At least one labeled polygon per ice type is required in the label mask, as Label Propagation is a semi-supervised learning algorithm.\n",
+    "#### The data of the image crops ('Sigma0_HH_db' and 'Sigma0_HV_db') need to be normalized before entering them in the label propagation algorithm. Different normalization options are implemented here, and their respective results on the image crops are visualized.\n",
+    "#### Label Propagation is implemented using scikit-learn (https://scikit-learn.org/stable/modules/generated/sklearn.semi_supervised.LabelPropagation.html)"
    ]
   },
   {
@@ -129,7 +131,7 @@
    "id": "ab56e1e4-efa2-4d3a-8c4c-40fd7842170d",
    "metadata": {},
    "source": [
-    "#### Visualize HH and HV polarization bands and corresponding label mask"
+    "### Visualize HH and HV polarization image bands and corresponding label mask"
    ]
   },
   {
@@ -192,7 +194,7 @@
    "id": "69a16506-f689-4057-b7fe-1950465f1233",
    "metadata": {},
    "source": [
-    "#### Prepare data for label propagation: normalize data and stack bands"
+    "### Prepare data for label propagation: normalize data and stack bands"
    ]
   },
   {
@@ -302,7 +304,7 @@
    "id": "0427d94e-402b-463a-88df-62521b120305",
    "metadata": {},
    "source": [
-    "#### Implementation of Label Propagation for the classification of sea ice types"
+    "### Implementation of Label Propagation for the classification of sea ice types"
    ]
   },
   {
@@ -361,7 +363,7 @@
    "id": "b87eb43d-0bd9-4176-b42d-a9327807e7f6",
    "metadata": {},
    "source": [
-    "#### Plot results of Label Propagation"
+    "### Plot results of Label Propagation"
    ]
   },
   {
