--- a/S1_sea_ice_classification/sentinel_search_Fram_Strait.ipynb
+++ b/S1_sea_ice_classification/sentinel_search_Fram_Strait.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "b58a4e61-67e4-48fd-9bab-3b6319524880",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,25 @@
     "import datetime\n",
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
-    "from loguru import logger"
+    "from loguru import logger\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0833b4dd-a146-4f2d-8951-78cd5626e64e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C, cloud coverage 0-30%) data.\n",
+    "### The search is implemented using the 'sentinelsat' package, which is a powerful search API for the Copernicus Scihub database.\n",
+    "\n",
+    "### Two requirement to run this script:\n",
+    "### 1) have a user account on Copernicus Open Access Hub: https://scihub.copernicus.eu/dhus/#/home\n",
+    "### 2) create a file called .env in the directory 'S1_sea_ice_classification'. In this file, save your username and password for SciHub like this:\n",
+    "### DHUS_USER=<scihub_username>\n",
+    "### DHUS_PASSWORD=<scihub_password>\n"
    ]
   },
   {
@@ -25,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "39747ddd-229f-49ad-a252-6573f1d8e877",
    "metadata": {},
    "outputs": [],
@@ -47,28 +65,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
+   "id": "3e7e5027-e0e9-4573-95ae-a1f5b55780b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cta014\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.environ[\"DHUS_USER\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "9338397b-7c04-4064-bc7a-96b1bc33d1ed",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnauthorizedError",
-     "evalue": "Invalid user name or password. Note that account creation and password changes may take up to a week to propagate to the 'https://apihub.copernicus.eu/apihub/' API URL you are using. Consider switching to 'https://scihub.copernicus.eu/dhus/' instead in the mean time.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sentinelsat/sentinel.py:1017\u001b[0m, in \u001b[0;36mSentinelAPI._check_scihub_response\u001b[0;34m(response, test_json, query_string)\u001b[0m\n\u001b[1;32m   1016\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1017\u001b[0m     \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1018\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m test_json:\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/requests/models.py:1021\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1020\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1021\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[0;31mHTTPError\u001b[0m: 401 Client Error:  for url: https://apihub.copernicus.eu/apihub/search?format=json&rows=100&start=0&q=beginPosition%3A%5B%222020-12-01T00%3A00%3A00Z%22+TO+%222021-06-01T00%3A00%3A00Z%22%5D+platformname%3A%22Sentinel-1%22+producttype%3A%22GRD%22+footprint%3A%22Intersects%28GEOMETRYCOLLECTION%28POLYGON%28%28-11.9783+80.0608%2C-17.0274+78.6782%2C-16.3002+77.2552%2C-1.1040+77.0094%2C0.7741+79.6387%2C-11.9783+80.0608%29%29%29%29%22",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mUnauthorizedError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m endtime \u001b[38;5;241m=\u001b[39m parse(endtime, settings\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDATE_ORDER\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYMD\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# query for specific product\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m s1_products \u001b[38;5;241m=\u001b[39m \u001b[43mapi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[43m                \u001b[49m\u001b[43mgeojson_to_wkt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mread_geojson\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpolygon_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[43m                \u001b[49m\u001b[43mdate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mstarttime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendtime\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m                \u001b[49m\u001b[43mplatformname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSentinel-1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m                \u001b[49m\u001b[43mproducttype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGRD\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[43m                \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m s1_list_with_overlap \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     26\u001b[0m s1_s2_overlap \u001b[38;5;241m=\u001b[39m {}\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sentinelsat/sentinel.py:282\u001b[0m, in \u001b[0;36mSentinelAPI.query\u001b[0;34m(self, area, date, raw, area_relation, order_by, limit, offset, **keywords)\u001b[0m\n\u001b[1;32m    274\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogger\u001b[38;5;241m.\u001b[39mdebug(\n\u001b[1;32m    275\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning query: order_by=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, limit=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, offset=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, query=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    276\u001b[0m     order_by,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    279\u001b[0m     query,\n\u001b[1;32m    280\u001b[0m )\n\u001b[1;32m    281\u001b[0m formatted_order_by \u001b[38;5;241m=\u001b[39m _format_order_by(order_by)\n\u001b[0;32m--> 282\u001b[0m response, count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_query\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mformatted_order_by\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlimit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moffset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    283\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcount\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m products\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    284\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _parse_opensearch_response(response)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sentinelsat/sentinel.py:355\u001b[0m, in \u001b[0;36mSentinelAPI._load_query\u001b[0;34m(self, query, order_by, limit, offset)\u001b[0m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_load_query\u001b[39m(\u001b[38;5;28mself\u001b[39m, query, order_by\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, offset\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m--> 355\u001b[0m     products, count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_subquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder_by\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlimit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moffset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    357\u001b[0m     \u001b[38;5;66;03m# repeat query until all results have been loaded\u001b[39;00m\n\u001b[1;32m    358\u001b[0m     max_offset \u001b[38;5;241m=\u001b[39m count\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sentinelsat/sentinel.py:389\u001b[0m, in \u001b[0;36mSentinelAPI._load_subquery\u001b[0;34m(self, query, order_by, limit, offset)\u001b[0m\n\u001b[1;32m    387\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdl_limit_semaphore:\n\u001b[1;32m    388\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msession\u001b[38;5;241m.\u001b[39mget(url, params\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m\"\u001b[39m: query\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlatin1\u001b[39m\u001b[38;5;124m\"\u001b[39m)})\n\u001b[0;32m--> 389\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_check_scihub_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquery_string\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    391\u001b[0m \u001b[38;5;66;03m# store last status code (for testing)\u001b[39;00m\n\u001b[1;32m    392\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_last_response \u001b[38;5;241m=\u001b[39m response\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sentinelsat/sentinel.py:1047\u001b[0m, in \u001b[0;36mSentinelAPI._check_scihub_response\u001b[0;34m(response, test_json, query_string)\u001b[0m\n\u001b[1;32m   1041\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapihub.copernicus.eu/apihub\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m response\u001b[38;5;241m.\u001b[39murl:\n\u001b[1;32m   1042\u001b[0m         msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m   1043\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m. Note that account creation and password changes may take up to a week \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1044\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mto propagate to the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://apihub.copernicus.eu/apihub/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m API URL you are using. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1045\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConsider switching to \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://scihub.copernicus.eu/dhus/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m instead in the mean time.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1046\u001b[0m         )\n\u001b[0;32m-> 1047\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m UnauthorizedError(msg, response)\n\u001b[1;32m   1048\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRequest Entity Too Large\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m msg \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRequest-URI Too Long\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m msg:\n\u001b[1;32m   1049\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mServer was unable to process the query due to its excessive length\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mUnauthorizedError\u001b[0m: Invalid user name or password. Note that account creation and password changes may take up to a week to propagate to the 'https://apihub.copernicus.eu/apihub/' API URL you are using. Consider switching to 'https://scihub.copernicus.eu/dhus/' instead in the mean time."
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c1c3e1e58254fe6a35e73ceaa1df490",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Querying products:  23%|##3       | 100/426 [00:00<?, ?product/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4706b028dcac4baaa5b24da8d5fbc665",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Querying products:  96%|#########6| 100/104 [00:00<?, ?product/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 15 S1 scenes with overlapping S2 imagery.\n",
+      "['7a9d39fe-7343-43d5-bbfb-2c1c23b873f2', 'e2e44b29-43c5-48f8-b0b2-e9bd150dc542', '73ed5fe4-eada-4ed8-aa9a-83d9f2218777', '11693167-8de4-4529-a779-a00290346b19', '78f1e137-189a-4743-a31a-52537468e780', '6fde56ac-b85b-444e-be41-194d0a686b88', '88c9e908-8c08-4e6a-92fd-e7ecb6e8d060', '81c26764-5ac0-42b7-9917-3d647dde6ead', '42f92139-78a1-4971-a9ed-ec448cf8ecfa', '9c620dee-4040-4b56-9ec4-203e4bfcd3f8', '858d48a5-afe4-4f6c-93f3-bef2bf0116b2', '26fa1a72-8ad4-4eb8-9852-d1adce9782b0', 'a5d38ae2-bbc4-4548-a64a-4fc55dc9bf86', 'fb0d3244-469e-4ff6-9bbe-558bd0b14844', 'f05595d8-7223-4120-8578-7e05348f5245']\n"
      ]
     }
    ],
@@ -81,9 +133,9 @@
     "area = './rois/Fram_Strait.geojson'\n",
     "polygon_path = Path(area).expanduser().absolute()\n",
     "\n",
-    "# search from 1st Dec 2020 to 1st June 2021\n",
-    "starttime = \"2020-12-01\"\n",
-    "endtime = \"2021-06-01\"\n",
+    "# search from 1st March 2021 to 1st May 2021\n",
+    "starttime = \"2020-03-01\"\n",
+    "endtime = \"2020-05-01\"\n",
     "starttime = parse(starttime, settings={\"DATE_ORDER\": \"YMD\"})\n",
     "endtime = parse(endtime, settings={\"DATE_ORDER\": \"YMD\"})\n",
     "\n",
@@ -111,20 +163,28 @@
     "    s2_starttime = s1_timestamp - timedelta\n",
     "    s2_endtime = s1_timestamp + timedelta\n",
     "\n",
-    "    #starttime = parse(starttime, settings={\"DATE_ORDER\": \"YMD\"})\n",
-    "    #endtime = parse(endtime, settings={\"DATE_ORDER\": \"YMD\"})\n",
-    "\n",
+    "    # query for overlapping Sentinel-2 optical images\n",
     "    s2_products = api.query(area = s1_footprint,\n",
     "                            date = (s2_starttime, s2_endtime),\n",
     "                            platformname=\"Sentinel-2\",\n",
     "                            processinglevel=\"Level-1C\",\n",
     "                            cloudcoverpercentage=(0, 30)\n",
     "                            )\n",
+    "    \n",
     "    # if overlapping S2 scenes found, add the S1 id and corresponding S2 query results in dictionary\n",
     "    if not len(s2_products) == 0:\n",
     "        s1_list_with_overlap.append(product)\n",
-    "        s1_s2_overlap[product] = s2_products\n",
-    "        \n",
+    "        if len(s2_products) == 1:\n",
+    "            for s2product in s2_products:\n",
+    "                s2_identifier = s2_products[s2product]['identifier']\n",
+    "                s1_s2_overlap[s1_identifier] = s2_identifier\n",
+    "        elif len(s2_products) > 1:\n",
+    "            s2_id_list = []\n",
+    "            for s2product in s2_products:\n",
+    "                s2_identifier = s2_products[s2product]['identifier']\n",
+    "                s2_id_list.append(s2_identifier)\n",
+    "            s1_s2_overlap[s1_identifier] = s2_id_list\n",
+    "            \n",
     "# this list is contains the S1 scenes that have overlapping S2 imagery\n",
     "print('Found', len(s1_list_with_overlap), 'S1 scenes with overlapping S2 imagery.')\n",
     "print(s1_list_with_overlap)\n",
@@ -135,8 +195,90 @@
     "# loop over all original query results and only keep the ones that have overlapping S2\n",
     "for product in s1_products:\n",
     "    if not product in s1_list_with_overlap:\n",
-    "        del s1_products_overlap[product]"
+    "        del s1_products_with_overlap[product]\n",
+    "        \n",
+    "# 's1_products_with_overlap' can be direclty entered into the api.download_all() function. This will then download all S1 images that have overlapping S2 imagery"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4e44f0a-ff67-4551-9600-88770157ae54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(s1_products_with_overlap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "923b4349-11c9-4367-91b8-5234389a5810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odict_keys(['b1147e36-9e0f-4ff5-93a0-f5e2d00da8ab', 'c31e230a-524d-4ab0-a442-457ffc65a93b'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1_products_with_overlap.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ddb2a98e-ec28-4c01-8f70-45927170d17b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['S1B_EW_GRDM_1SDH_20210331T174023_20210331T174045_026262_032261_26FA', 'S1A_EW_GRDM_1SDH_20210316T180541_20210316T180652_037027_045B91_98E3'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1_s2_overlap.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8dc6032f-d205-4f78-805b-165619d63b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['S2B_MSIL1C_20210331T154809_N0300_R054_T26XMN_20210331T174855', 'S2B_MSIL1C_20210331T154809_N0300_R054_T26XMM_20210331T174855']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1_s2_overlap['S1B_EW_GRDM_1SDH_20210331T174023_20210331T174045_026262_032261_26FA'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0630712d-6c9b-40c6-9922-c46a00a32b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
