Barents Sea sentinel search

--- a/S1_sea_ice_classification/sentinel_search_Barents_Sea.ipynb
+++ b/S1_sea_ice_classification/sentinel_search_Barents_Sea.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "b58a4e61-67e4-48fd-9bab-3b6319524880",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "39747ddd-229f-49ad-a252-6573f1d8e877",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "9338397b-7c04-4064-bc7a-96b1bc33d1ed",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3 S1 scenes with overlapping S2 imagery.\n"
+      "Found 2 S1 scenes with overlapping S2 imagery.\n"
      ]
     }
    ],
@@ -81,12 +81,12 @@
     "\n",
     "# search over Fram Strait for S1 imagery (from 1st Dec 2020 to 1st June 2021)\n",
     "# use custom geojson files containing search polygon\n",
-    "area = './rois/Fram_Strait.geojson'\n",
+    "area = './rois/Barents_Sea.geojson'\n",
     "polygon_path = Path(area).expanduser().absolute()\n",
     "\n",
     "# set start- and endtime for search\n",
-    "starttime = \"2020-03-01\"\n",
-    "endtime = \"2020-05-01\"\n",
+    "starttime = \"2020-01-01\"\n",
+    "endtime = \"2020-04-01\"\n",
     "\n",
     "# area relation for S1, 'Contains' returns all hits where the ROI polygon is entirely WITHIN the footprint of the S1\n",
     "s1_area_relation = 'Contains'\n",
@@ -114,7 +114,7 @@
     "    s1_timestamp = s1_products[product]['beginposition']\n",
     "\n",
     "    # look for S2 imagery taken 2 hours before or after S1 acquisition\n",
-    "    timedelta = datetime.timedelta(hours = 5) \n",
+    "    timedelta = datetime.timedelta(hours = 8) \n",
     "    s2_starttime = s1_timestamp - timedelta\n",
     "    s2_endtime = s1_timestamp + timedelta\n",
     "\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "66ee3a12-52fb-4b08-80bf-b9f227d9d454",
    "metadata": {},
    "outputs": [
@@ -161,10 +161,10 @@
    "source": [
     "# save dictionary results to text files, these text files can then be used to download the S1 and S2 products on e.g. Creodias\n",
     "for key, value in s1_s2_overlap.items(): \n",
-    "    with open(f\"./search_results_Fram_Strait/{key}.txt\", 'w') as f:\n",
+    "    with open(f\"./search_results_Barents_Sea/{key}.txt\", 'w') as f:\n",
     "        f.write('\\n'.join(value))\n",
     "        \n",
-    "print('Search results saved in \"search_results_Fram_Strait\" folder!')"
+    "print('Search results saved in \"search_results_Barents_Sea\" folder!')"
    ]
   },
   {
