adding more comments

--- a/S1_sea_ice_classification/sentinel_search_Barents_Sea.ipynb
+++ b/S1_sea_ice_classification/sentinel_search_Barents_Sea.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "49679b71-9db6-4cfc-8455-e2cb9972d316",
+   "metadata": {},
+   "source": [
+    "## Search for overlapping Sentinel-1 and Sentinel-2 in Barents Sea"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "876d388f-32cc-4f03-aeb9-fadf2e242ebb",
+   "metadata": {},
+   "source": [
+    "### This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C, cloud coverage 0-30%) data.\n",
+    "#### The search is implemented using the 'sentinelSAT' package, which is a powerful search API for the Copernicus Scihub database.\n",
+    "\n",
+    "#### Two requirement to run this script:\n",
+    "#### 1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
+    "#### 2) create a file named .env in the directory 'S1_sea_ice_classification'. In this file, save your username and password for Copernicus SciHub like this:\n",
+    "#### DHUS_USER=\"scihub_username\"\n",
+    "#### DHUS_PASSWORD=\"scihub_password\"\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b58a4e61-67e4-48fd-9bab-3b6319524880",
@@ -14,21 +37,6 @@
     "from dotenv import load_dotenv\n",
     "from loguru import logger\n",
     "import os"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "876d388f-32cc-4f03-aeb9-fadf2e242ebb",
-   "metadata": {},
-   "source": [
-    "## This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C, cloud coverage 0-30%) data.\n",
-    "### The search is implemented using the 'sentinelSAT' package, which is a powerful search API for the Copernicus Scihub database.\n",
-    "\n",
-    "### Two requirement to run this script:\n",
-    "### 1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
-    "### 2) create a file named .env in the directory 'S1_sea_ice_classification'. In this file, save your username and password for Copernicus SciHub like this:\n",
-    "### DHUS_USER=\"scihub_username\"\n",
-    "### DHUS_PASSWORD=\"scihub_password\"\n"
    ]
   },
   {
