--- a/S1_sea_ice_classification/sentinel_search_Fram_Strait.ipynb
+++ b/S1_sea_ice_classification/sentinel_search_Fram_Strait.ipynb
@@ -1,19 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "b58a4e61-67e4-48fd-9bab-3b6319524880",
+   "cell_type": "markdown",
+   "id": "fbe8cf47-78b4-486a-a6d0-ffde60850aa0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sentinelsat import SentinelAPI, read_geojson, geojson_to_wkt\n",
-    "from dateparser import parse\n",
-    "import datetime\n",
-    "from pathlib import Path\n",
-    "from dotenv import load_dotenv\n",
-    "from loguru import logger\n",
-    "import os"
+    "## Search for overlapping Sentinel-1 and Sentinel-2 in Fram Strait"
    ]
   },
   {
@@ -29,6 +21,22 @@
     "### 2) create a file named .env in the directory 'S1_sea_ice_classification'. In this file, save your username and password for Copernicus SciHub like this:\n",
     "### DHUS_USER=\"scihub_username\"\n",
     "### DHUS_PASSWORD=\"scihub_password\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b58a4e61-67e4-48fd-9bab-3b6319524880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentinelsat import SentinelAPI, read_geojson, geojson_to_wkt\n",
+    "from dateparser import parse\n",
+    "import datetime\n",
+    "from pathlib import Path\n",
+    "from dotenv import load_dotenv\n",
+    "from loguru import logger\n",
+    "import os"
    ]
   },
   {
