--- a/S1_sea_ice_classification/sea_ice_types_classification.ipynb
+++ b/S1_sea_ice_classification/sea_ice_types_classification.ipynb
@@ -212,7 +212,8 @@
    "id": "69a16506-f689-4057-b7fe-1950465f1233",
    "metadata": {},
    "source": [
-    "### Prepare input bands for label propagation\n",
+    "### Prepare input bands and label mask for label propagation\n",
+    "#### Preparing the data for label propagation happens in 3 steps, described one by one here.\n",
     "#### **_Step 1: update label mask_**  <br> The label propagation algorithm in scikit-learn requires all unlabeled samples to have value -1. In our original label mask, the unlabeled samples had value 0, so we replace all 0 values by -1."
    ]
   },
