adding more coments and making figures nice

--- a/S1_ice_water_classification/sentinel_search_Fram_Strait.ipynb
+++ b/S1_ice_water_classification/sentinel_search_Fram_Strait.ipynb
@@ -5,7 +5,8 @@
    "id": "fbe8cf47-78b4-486a-a6d0-ffde60850aa0",
    "metadata": {},
    "source": [
-    "## Search for overlapping Sentinel-1 and Sentinel-2 in Fram Strait"
+    "## Search for overlapping Sentinel-1 (S1) and Sentinel-2 (S2) in Fram Strait\n",
+    "---"
    ]
   },
   {
@@ -13,19 +14,31 @@
    "id": "876d388f-32cc-4f03-aeb9-fadf2e242ebb",
    "metadata": {},
    "source": [
-    "## This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C, cloud coverage 0-30%) data.\n",
-    "### The search is implemented using the 'sentinelSAT' package, which is a powerful search API for the Copernicus Scihub database.\n",
+    "### This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C) data. The search is implemented using the 'sentinelSAT' package, which is a powerful search API for the Copernicus Scihub database.\n",
     "\n",
-    "### Two requirement to run this script:\n",
-    "### 1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
-    "### 2) create a file named .env in the directory 'S1_sea_ice_classification'. In this file, save your username and password for Copernicus SciHub like this:\n",
-    "### DHUS_USER=\"scihub_username\"\n",
-    "### DHUS_PASSWORD=\"scihub_password\"\n"
+    "#### **Requirements to run this script:**\n",
+    "1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
+    "2) create a file named '.env' in the directory 'S1_ice_water_classification'. In this file, save your username and password for Copernicus SciHub in exactly this format:\n",
+    "\n",
+    "> DHUS_USER=\"scihub_username\" <br>\n",
+    "> DHUS_PASSWORD=\"scihub_password\"\n",
+    "\n",
+    "_**NOTE**: it is strongly recommended to add the .env file to the .gitignore, to avoid pushing your credentials to a public repository!_\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a1c6d61-0bf7-47e5-b37d-55da4bf73a15",
+   "metadata": {},
+   "source": [
+    "#### Import some packages needed to run this code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "b58a4e61-67e4-48fd-9bab-3b6319524880",
    "metadata": {},
    "outputs": [],
@@ -44,12 +57,12 @@
    "id": "d8bb50c2-8f8f-47d0-954c-d35c6a9e01eb",
    "metadata": {},
    "source": [
-    "#### Load environment variables containing username and password for Copernicus Scihub"
+    "#### Load environment variables from .env file, containing username and password for Copernicus Scihub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "39747ddd-229f-49ad-a252-6573f1d8e877",
    "metadata": {},
    "outputs": [],
@@ -66,7 +79,74 @@
     "    os.environ[\"DHUS_PASSWORD\"]\n",
     "except:\n",
     "    logger.error(\"The environment variable 'DHUS_PASSWORD' is not set! Exiting...\")\n",
-    "    raise KeyError(\"The environment variable 'DHUS_PASSWORD' is not set!\")\n"
+    "    raise KeyError(\"The environment variable 'DHUS_PASSWORD' is not set!\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "830f2338-986d-4784-ba90-72494f53d80a",
+   "metadata": {},
+   "source": [
+    "#### Establish the connection to Copernicus Scihub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "08518934-09c1-4f85-a034-a99401b0a451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# establish connection to Copernicus Scihub\n",
+    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "105d2f8c-8b30-48d9-a6d1-00d257fc3dc9",
+   "metadata": {},
+   "source": [
+    "#### Determine search criteria for Sentinel-1 imagery and perform search\n",
+    "In a first step, we search for Sentinel-1 EW GRDM products that contain our region of interest (ROI). \n",
+    "The ROI for Fram Strait can be found in the 'rois' folder. We narrow the search down by the following criteria:\n",
+    "1) area (that is the ROI, given as GEOjson file)\n",
+    "2) time (start- and endtime)\n",
+    "3) platform and producttype: by default set to Sentinel-1 GRD\n",
+    "\n",
+    "To create your own custom ROI, nagivate to : https://geojson.io/ and draw a polygon of your choice. Then, save the result in GEOjson file format. Upload it to the notebook and give the path to the new file in the variable 'area' (see below)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "89c304b6-1b91-495c-bb97-8d7beafa4344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# search over Fram Strait for S1 imagery\n",
+    "# use custom geojson files containing search polygon\n",
+    "area = './rois/Fram_Strait.geojson'\n",
+    "polygon_path = Path(area).expanduser().absolute()\n",
+    "\n",
+    "# set start- and endtime for search\n",
+    "starttime = \"2020-03-01\"\n",
+    "endtime = \"2020-05-01\"\n",
+    "    \n",
+    "starttime = parse(starttime, settings={\"DATE_ORDER\": \"YMD\"})\n",
+    "endtime = parse(endtime, settings={\"DATE_ORDER\": \"YMD\"})\n",
+    "\n",
+    "# area relation for S1, 'Contains' returns all hits where the ROI polygon is entirely WITHIN the footprint of the S1\n",
+    "s1_area_relation = 'Contains'\n",
+    "\n",
+    "# query for S1 products that match our search criteria\n",
+    "s1_products = api.query(\n",
+    "                geojson_to_wkt(read_geojson(polygon_path)),\n",
+    "                date=(starttime, endtime),\n",
+    "                platformname=\"Sentinel-1\",\n",
+    "                producttype=\"GRD\",\n",
+    "                area_relation=s1_area_relation,\n",
+    "                )"
    ]
   },
   {
@@ -84,33 +164,6 @@
     }
    ],
    "source": [
-    "# establish connection to Copernicus Scihub\n",
-    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])\n",
-    "\n",
-    "# search over Fram Strait for S1 imagery (from 1st Dec 2020 to 1st June 2021)\n",
-    "# use custom geojson files containing search polygon\n",
-    "area = './rois/Fram_Strait.geojson'\n",
-    "polygon_path = Path(area).expanduser().absolute()\n",
-    "\n",
-    "# set start- and endtime for search\n",
-    "starttime = \"2020-03-01\"\n",
-    "endtime = \"2020-05-01\"\n",
-    "\n",
-    "# area relation for S1, 'Contains' returns all hits where the ROI polygon is entirely WITHIN the footprint of the S1\n",
-    "s1_area_relation = 'Contains'\n",
-    "    \n",
-    "starttime = parse(starttime, settings={\"DATE_ORDER\": \"YMD\"})\n",
-    "endtime = parse(endtime, settings={\"DATE_ORDER\": \"YMD\"})\n",
-    "\n",
-    "# query for S1 products that match our search criteria\n",
-    "s1_products = api.query(\n",
-    "                geojson_to_wkt(read_geojson(polygon_path)),\n",
-    "                date=(starttime, endtime),\n",
-    "                platformname=\"Sentinel-1\",\n",
-    "                producttype=\"GRD\",\n",
-    "                area_relation=s1_area_relation,\n",
-    "                )\n",
-    "\n",
     "# create empty dictionary that will contain S1 identifiers as keys, and the overlapping S2 identifier(s) as values\n",
     "s1_s2_overlap = {}\n",
     "\n",
@@ -125,7 +178,10 @@
     "    timedelta = datetime.timedelta(hours = 5) \n",
     "    s2_starttime = s1_timestamp - timedelta\n",
     "    s2_endtime = s1_timestamp + timedelta\n",
-    "\n",
+    " \n",
+    "    # define cloud cover percentage range\n",
+    "    cloudcover = (0, 30)\n",
+    "    \n",
     "    # area relation for S2, 'intersects' returns all hits where the ROI polygon INTERSECTS with the S1 footprint\n",
     "    s2_area_relation = 'Intersects'\n",
     "\n",
@@ -135,7 +191,7 @@
     "                        date = (s2_starttime, s2_endtime),\n",
     "                        platformname=\"Sentinel-2\",\n",
     "                        processinglevel=\"Level-1C\",\n",
-    "                        cloudcoverpercentage=(0, 30),\n",
+    "                        cloudcoverpercentage=cloudcover,\n",
     "                        area_relation=s2_area_relation,\n",
     "                        )\n",
     "    \n",
